// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`aiPromptProjectDescription > should output the prompt 1`] = `
[
  {
    "content": "You describe a technical project for an engineer.
3 paragraphs maximum
DO NOT use adjective, superlative or adverb.
Details why it exists in one paragraph with a line break at end
Details briefly how it works
Use the list of technologies to describe how it works. Choose only the most relevant ones",
    "role": "system",
  },
  {
    "content": "Project name is \\"Analytics\\"

Technologies:
Hosting: GCP, GCE
Service: Aggregator
Saas: Algolia
Database: Postgres
Messaging: SQS
Depends on internal product: Billing
  ",
    "role": "user",
  },
]
`;

exports[`aiPromptProjectOnboarding > should output the prompt 1`] = `
[
  {
    "content": "You are technical documentation assistant, you are given a description, a file tree of the documentation and a list of technology. Output in an HTML format only what is inside the body tag. Documentation link are HTML, prepend the URL with \\"http://localhost:5173/acme/analytics/doc/\\"
1. Write a general introduction for project
2. A list of task to be ready to code on this project, only pick the relevant documentation link that would be interesting for an onboarding
3. Highlight important details about the technology",
    "role": "system",
  },
  {
    "content": "Project name: \\"Analytics\\"
The Analytics project collects data from various sources, processes it, and presents it in dashboards and reports. These outputs show key indicators and trends for the business.
The project also employs machine learning and statistical methods to analyze data. This analysis helps in predicting trends and making recommendations based on past data. This project assists businesses in making data-based decisions.



Documentation:
/readme: README
/docs/contributing: Contributing
/docs/installation: Installation
/docs/deploy: Deploy
/docs/deploy.terraform: Deploy With Terraform

Technologies:
Hosting: GCP, GCE
Service: Aggregator
Saas: Algolia
Database: Postgres
Messaging: SQS
Depends on internal product: Billing
",
    "role": "user",
  },
]
`;

exports[`aiPromptRewrite > should output the prompt 1`] = `
[
  {
    "content": "You rewrite content you are provided with for an engineer. Do not use adverb or subjective language.",
    "role": "system",
  },
  {
    "content": "Specfy is an awesome platform",
    "role": "user",
  },
]
`;
